--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.5",
+    "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
