프로젝트 파일 추가 및 연동

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "exchangeCurrency"]
 	path = exchangeCurrency
 	url = https://github.com/gaebonglee/exchangeCurrency.git
+[submodule "kurly"]
+	path = kurly
+	url = https://github.com/gaebonglee/kurly.git
